--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg text-primary font-weight-bold">
         <div class="container-fluid">
             <a class="navbar-brand text-white h1 fs-1 mt-2" href="#"
-            ><img src="{{ asset('images/logo_alternatif.png') }}" class="me-3 mb-1" width="50"
+            ><img src="{{ asset('images/logo_alternatif.png') }}" class="me-3 mb-1" width="50" alt="logo hospitime"
                 >HOSPITIME
                 </a>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
