--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,10 +14,10 @@
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Mot de passe'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">Créer le compte</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
