--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -25,7 +25,7 @@
     >
 
     <button class="btn btn-lg btn-primary" type="submit">
-        S'inscrire
+        Me connecter
     </button>
 </form>
 {% endblock %}
