Adaptation pour afficher les consultations dans le fichier displayPatientFile.html.twig (consultation étant une collection, il faut faire une boucle pour pouvoir les afficher)

--- a/templates/health_professional/displayPatientFile.html.twig
+++ b/templates/health_professional/displayPatientFile.html.twig
@@ -15,7 +15,13 @@
         <dd>{{ patient.treatments }}</dd>
 
         <dt>Autres consultations :</dt>
-        <dd>{{ patient.consultation }}</dd>
+        <dd>
+            {% for consultation in patient.consultation %}
+                <p>Consultation ID : {{ consultation.id }}, Date : {{ consultation.date|date('d/m/Y') }}</p>
+            {% else %}
+                <p>Aucune consultation trouvée.</p>
+            {% endfor %}
+        </dd>
 
         <dt>Commentaires :</dt>
         <dd>{{ patient.comments }}</dd>
