--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -2,6 +2,19 @@
 
 {% block title %}Hello FaqController!{% endblock %}
 
+{% block stylesheets %}
+    *, ::before, ::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    }
+
+
+
+
+{% endblock %}
+
+
 {% block body %}
     <h1>Consultez la Foire aux questions !</h1>
 
