--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -9,7 +9,11 @@
     padding: 0;
     }
 
-
+    h1 {
+    text-align: center;
+    padding: 35px 0;
+    font-size: 40px;
+    }
 
 
 {% endblock %}
