--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -15,6 +15,23 @@
     font-size: 40px;
     }
 
+    .container-faq {
+    width: 70%;
+    max-width: 900px;
+    min-width: 700px;
+    height: auto;
+    margin: 10px auto 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    }
+
+    .questions {
+    width: 100%;
+    height: auto;
+    margin: 5px;
+    }
 
 {% endblock %}
 
