--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -33,6 +33,27 @@
     margin: 5px;
     }
 
+    .visible-pannel {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #f1f1f1;
+    border-radius: 10px;
+    position: relative;
+    z-index: 100;
+    }
+
+    .visible-pannel h2 {
+    margin-left: 10px;
+    padding: 15px 5px;
+    font-size: 25px;
+    }
+
+    .visible-pannel img {
+    margin-right: 10px;
+    width: 25px;
+    cursor: pointer;
+    }
 {% endblock %}
 
 
