--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -49,10 +49,19 @@
     font-size: 25px;
     }
 
-    .visible-pannel img {
-    margin-right: 10px;
-    width: 25px;
-    cursor: pointer;
+    .toggle-pannel {
+    padding: 0px 15px;
+    height: 0px;
+    opacity: 0;
+    }
+
+    .toggle-pannel h4 {
+    font-size: 18px;
+    padding-bottom: 10px;
+    }
+
+    .toggle-pannel p {
+    line-height: 1.5;
     }
 {% endblock %}
 
