Correction du css

--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Hello FaqController!{% endblock %}
 
 {% block stylesheets %}
+<style>
     *, ::before, ::after {
     box-sizing: border-box;
     margin: 0;
@@ -63,6 +64,7 @@
     .toggle-pannel p {
     line-height: 1.5;
     }
+</style>
 {% endblock %}
 
 
