Correction de l'orthographe (pannel -> panel)

--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -34,7 +34,7 @@
     margin: 5px;
     }
 
-    .visible-pannel {
+    .visible-panel {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -44,24 +44,24 @@
     z-index: 100;
     }
 
-    .visible-pannel h2 {
+    .visible-panel h2 {
     margin-left: 10px;
     padding: 15px 5px;
     font-size: 25px;
     }
 
-    .toggle-pannel {
+    .toggle-panel {
     padding: 0px 15px;
     height: 0px;
     opacity: 0;
     }
 
-    .toggle-pannel h4 {
+    .toggle-panel h4 {
     font-size: 18px;
     padding-bottom: 10px;
     }
 
-    .toggle-pannel p {
+    .toggle-panel p {
     line-height: 1.5;
     }
 </style>
@@ -74,20 +74,20 @@
     <div class="container-faq">
 
         <div class="questions">
-            <div class="visible-pannel">
+            <div class="visible-panel">
                 <h2>Comment puis-je réserver une consultation en ligne ?</h2>
             </div>
-            <div class="toggle-pannel">
+            <div class="toggle-panel">
                 <h4>Comment puis-je réserver une consultation en ligne ?</h4>
                 <p>Vous pouvez réserver une consultation en ligne en vous rendant sur notre plateforme de réservation. Sélectionnez votre spécialité, le médecin de votre choix, et un créneau disponible. Une confirmation vous sera envoyée par email une fois la réservation effectuée.</p>
             </div>
         </div>
 
         <div class="questions">
-            <div class="visible-pannel">
+            <div class="visible-panel">
                 <h2>Dois-je créer un compte pour prendre rendez-vous ?</h2>
             </div>
-            <div class="toggle-pannel">
+            <div class="toggle-panel">
                 <h4>Dois-je créer un compte pour prendre rendez-vous ?</h4>
                 <p>Oui, il est nécessaire de créer un compte patient pour accéder à notre service de réservation en ligne. Cela permet de gérer vos rendez-vous et de recevoir des rappels automatiquement.</p>
             </div>
