Ajout de l'image dans la partie visible des questions

--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -79,6 +79,7 @@
         <div class="questions">
             <div class="visible-panel">
                 <h2>Comment puis-je réserver une consultation en ligne ?</h2>
+                <img src="{{ asset('images/croix.png') }}" alt="croix animation">
             </div>
             <div class="toggle-panel">
                 <h4>Comment puis-je réserver une consultation en ligne ?</h4>
@@ -89,6 +90,7 @@
         <div class="questions">
             <div class="visible-panel">
                 <h2>Dois-je créer un compte pour prendre rendez-vous ?</h2>
+                <img src="{{ asset('images/croix.png') }}" alt="croix animation">
             </div>
             <div class="toggle-panel">
                 <h4>Dois-je créer un compte pour prendre rendez-vous ?</h4>
