--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -53,6 +53,12 @@
             font-size: 25px;
             }
 
+            .visible-panel img {
+                margin-right: 10px;
+                width: 35px;
+                cursor: pointer;
+            }
+
             .toggle-panel {
             padding: 0px 15px;
             height: 0px;
