Ajout du gras des différents titres en css

--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -17,6 +17,7 @@
             text-align: center;
             padding: 35px 0;
             font-size: 40px;
+            font-weight: bold;
             }
 
             .container-faq {
@@ -51,6 +52,7 @@
             margin-left: 10px;
             padding: 15px 5px;
             font-size: 25px;
+            font-weight: bold;
             }
 
             .visible-panel img {
@@ -60,14 +62,15 @@
             }
 
             .toggle-panel {
-            padding: 0px 15px;
-            height: 0px;
+            padding: 0 15px;
+            height: 0;
             opacity: 0;
             }
 
             .toggle-panel h4 {
             font-size: 18px;
-            padding-bottom: 10px;
+            padding-top: 10px;
+            font-weight: bold;
             }
 
             .toggle-panel p {
