--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -107,4 +107,31 @@
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const allCross = document.querySelectorAll('.visible-panel img');
+            console.log(allCross);
+
+            allCross.forEach(cross =>{
+
+                cross.addEventListener('click', function(){
+                    const height = this.parentNode.parentNode.childNodes[3].scrollHeight;
+
+                    const currentChoice = this.parentNode.parentNode.childNodes[3];
+
+                    if(this.src.includes('croix')){
+                        this.src = '{{ asset('images/minus.png') }}';
+                        gsap.to(currentChoice, {duration: 0.2, height: height + 40, opacity: 1, padding: '20px 15px'})
+                    } else if (this.src.includes('minus')){
+                        this.src = '{{ asset('images/croix.png') }}';
+                        gsap.to(currentChoice, {duration: 0.2, height: 0, opacity: 0, padding: '0px 15px'})
+                    }
+                })
+            })
+        });
+    </script>
 {% endblock %}
