--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -113,25 +113,23 @@
 {% block javascripts %}
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const allCross = document.querySelectorAll('.visible-panel img');
-            console.log(allCross);
+            const allPanels = document.querySelectorAll('.visible-panel');
 
-            allCross.forEach(cross =>{
+            allPanels.forEach(panel => {
+                panel.addEventListener('click', function () {
+                    const cross = this.querySelector('img');
+                    const currentChoice = this.parentNode.querySelector('.toggle-panel');
+                    const height = currentChoice.scrollHeight;
 
-                cross.addEventListener('click', function(){
-                    const height = this.parentNode.parentNode.childNodes[3].scrollHeight;
-
-                    const currentChoice = this.parentNode.parentNode.childNodes[3];
-
-                    if(this.src.includes('croix')){
-                        this.src = '{{ asset('images/minus.png') }}';
-                        gsap.to(currentChoice, {duration: 0.2, height: height + 40, opacity: 1, padding: '20px 15px'})
-                    } else if (this.src.includes('minus')){
-                        this.src = '{{ asset('images/croix.png') }}';
-                        gsap.to(currentChoice, {duration: 0.2, height: 0, opacity: 0, padding: '0px 15px'})
+                    if (cross.src.includes('croix')) {
+                        cross.src = '{{ asset("images/minus.png") }}';
+                        gsap.to(currentChoice, { duration: 0.2, height: height + 40, opacity: 1, padding: '20px 15px' });
+                    } else if (cross.src.includes('minus')) {
+                        cross.src = '{{ asset("images/croix.png") }}';
+                        gsap.to(currentChoice, { duration: 0.2, height: 0, opacity: 0, padding: '0px 15px' });
                     }
-                })
-            })
+                });
+            });
         });
     </script>
 {% endblock %}
