--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -7,6 +7,13 @@
 {% endblock %}
 {% block body %}
     <h1>{{ titre }}</h1>
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
     {{ form_errors(form) }}
     {{ form_start(form) }}
     {{ form_widget(form) }}
