--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello FaqController!{% endblock %}
+{% block title %}Foire aux questions{% endblock %}
 
 {% block stylesheets %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
