Ajout de d'affichage de variable pour le débuggage

--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -19,4 +19,7 @@
     {{ form_widget(form) }}
     <button type="submit" class="btn">Mettre à jour le compte</button>
     {{ form_end(form) }}
+    {{ mdp ?? 'non'}}
+    {{ bool ?? 'aucun'}}
+    {{ pswrd ?? 'non plus'}}
 {% endblock %}
