--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,17 +7,24 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
 
-    {{ form_errors(registrationForm) }}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="card shadow p-4 col-md-6 mb-4">
+                <h2 class="mb-4 text-center">Inscrivez-vous</h2>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de passe'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+                {{ form_errors(registrationForm) }}
 
-        <button type="submit" class="btn">Créer le compte</button>
-    {{ form_end(registrationForm) }}
+                {{ form_start(registrationForm) }}
+
+                    {{ form_rest(registrationForm) }}
+                    <button type="submit" class="btn btn-lg btn-danger mt-4">Créer le compte</button>
+
+                {{ form_end(registrationForm) }}
+            </div>
+        </div>
+    </div>
+
+
+
 {% endblock %}
