--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Se connecter{% endblock %}
 
 {% block body %}
 <form method="post">
@@ -14,18 +14,30 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Connectez-vous</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="card shadow p-4 col-md-6">
+                <h2 class="mb-4 text-center">Connectez-vous</h2>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+                <input placeholder="Email" type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-4" autocomplete="email" required autofocus>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Me connecter
-    </button>
+                <input placeholder="Mot de passe"
+                        type="password"
+                        name="password"
+                        id="inputPassword"
+                        class="form-control"
+                        autocomplete="current-password"
+                        required>
+
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                <button class="btn btn-lg btn-danger mt-4" type="submit">
+                    Se connecter
+                </button>
+                <a href="{{ path('app_register') }}">Pas encore de compte ?</a>
+            </div>
+        </div>
+    </div>
+
 </form>
 {% endblock %}
