--- a/templates/layout/_error.html.twig
+++ b/templates/layout/_error.html.twig
@@ -1,11 +1,14 @@
 {% block stylesheets %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ asset('styles/error.css') }}">
 {% endblock %}
 
 {% block body %}
-    <div class="error_container">
-        <h1 class="error">Erreur {{ exception.statusCode }}</h1>
-        <p class="status_text">{{ exception.statusText }}</p>
-        <a href="{{ path('app_home') }}" class="home">Retour à l'accueil</a>
+    <div class="d-flex justify-content-center align-items-center min-vh-100 text-center">
+        <div class="container">
+            <h1 class="display-1">Erreur {{ exception.statusCode }}</h1>
+            <p class="lead">{{ exception.statusText }}</p>
+            <a href="{{ path('app_home') }}" class="btn btn-outline-danger btn-lg">Retour à l'accueil</a>
+        </div>
     </div>
 {% endblock %}
