Ajout du contenu de la page de contact

--- a/templates/contact_page/index.html.twig
+++ b/templates/contact_page/index.html.twig
@@ -3,5 +3,50 @@
 {% block title %}Page de contact{% endblock %}
 
 {% block body %}
+    <div class="container my-5">
+        <h1 class="text-center mb-4">Pour nous contacter, c'est simple !</h1>
+        <div class="row text-center">
+            <div class="col-md-4 mb-3">
+                <div class="card border-0">
+                    <div class="card-body">
+                        <span class="material-symbols-outlined" style="font-size: 48px;">
+                            contact_phone
+                        </span>
+                        <p class="card-text fs-5">05 05 05 05 05</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card border-0">
+                    <div class="card-body">
+                        <span class="material-symbols-outlined" style="font-size: 48px;">
+                            home
+                        </span>
+                        <p class="card-text fs-5">
+                            Hospitime<br>
+                            67 place Drouet d'Erlon<br>
+                            51000, Reims
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card border-0">
+                    <div class="card-body">
+                        <span class="material-symbols-outlined" style="font-size: 48px;">
+                            mail
+                        </span>
+                        <p class="card-text fs-5">hospitime@gmail.gouv</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row text-center mt-5 justify-content-center">
+            <p class="fs-5">Si vous êtes intéressés pour nous rejoindre, suivez notre page LinkedIn :</p>
+            <a href="https://linkedin.com" class="btn btn-primary w-auto text-center" role="button">
+                Notre LinkedIn
+            </a>
+        </div>
 
+    </div>
 {% endblock %}
