--- a/templates/contact_page/index.html.twig
+++ b/templates/contact_page/index.html.twig
@@ -47,6 +47,11 @@
                 Notre LinkedIn
             </a>
         </div>
-
+        <div class="row mt-5">
+            <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.998896027868!2d4.027131915673778!3d49.25705947932807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e978d4f15ae167%3A0x7cf7bdfd61a96db8!2s67%20Pl.%20Drouet%20d&#39;Erlon%2C%2051100%20Reims%2C%20France!5e0!3m2!1sen!2sfr!4v1638954349347!5m2!1sen!2sfr"
+                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>
+        </div>
     </div>
 {% endblock %}
