--- a/templates/consultation/delete_medical_appointment.html.twig
+++ b/templates/consultation/delete_medical_appointment.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends '../base.html.twig' %}
 
-{% set title = 'Édition du rendez vous de ' %}
+{% set title = "Suppression du rendez-vous de " %}
 
 
 {% block title %}
