--- a/templates/consultation/update_medical_appointment.html.twig
+++ b/templates/consultation/update_medical_appointment.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends '../base.html.twig' %}
 
-{% set title = "Suppression du rendez-vous de " %}
+{% set title = 'Édition du rendez vous de ' %}
 
 
 {% block title %}
