--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,7 +11,7 @@
                 <form method="post" name="login_form">
 
                     {% if error %}
-                        <div class="invalid-feedback">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                     {% endif %}
 
                     {% if app.user %}
