Implémentation de la méthode corriger dans le controller HealthProfessional ainsi que le twig de l'action associer

--- a/templates/health_professional/calendar.html.twig
+++ b/templates/health_professional/calendar.html.twig
@@ -13,7 +13,7 @@
 
             addEventSource([
                 {% if appointments is not null %}
-                    {% for consultation in appointments.consultation %}
+                    {% for consultation in appointments %}
                     {
                         id: '{{ consultation.id }}',
                         title: 'PATIENT : {{ consultation.patient.lastname|upper }} {{ consultation.patient.firstname
