--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,7 +24,8 @@
                         <input placeholder="Email"
                                type="email"
                                value="{{ last_username }}"
-                               name="email" id="inputEmail"
+                               name="email"
+                               id="inputEmail"
                                class="form-control mb-4"
                                autocomplete="email"
                                required autofocus>
