Utilisation de street au lieu de address

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -69,7 +69,7 @@
                         }
                     }) }}
 
-                    {{ form_row(registrationForm.address, {
+                    {{ form_row(registrationForm.street, {
                         label: 'Rue',
                         attr: {
                             placeholder: 'Entrez votre rue'
