Corrections mineures de la route app_user_show

--- a/templates/patient/_appointment.html.twig
+++ b/templates/patient/_appointment.html.twig
@@ -5,7 +5,7 @@
         <th>Heure de Fin</th>
         <th>Praticien</th>
     </tr>
-    {% if appointments is not null %}
+    {% if appointments is not empty %}
         {% for appointment in appointments %}
             <tr>
                 <td>
