--- a/templates/availability/update.html.twig
+++ b/templates/availability/update.html.twig
@@ -1,9 +1,3 @@
-{% extends 'base.html.twig' %}
+{% set titlePage = "Édition d'une disponibilité" %}
 
-{% block body %}
-
-{% endblock %}
-
-{% block title %}
-
-{% endblock %}
+ {{ include(('availability/_form.html.twig'), {submit_label: 'Modifier', form: form, titlePage: titlePage}, with_context = false) }}
